--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,185 @@
 * {
     box-sizing: border-box;
 }
+:root {
+    --header-bg: #10375c;
+}
 html {
     font-size: 62.5%;
 }
 body {
     font-size: 1.6rem;
     font-family: "Sora", sans-serif;
+}
+/* Common */
+a {
+    text-decoration: none;
+}
+.container {
+    width: 1170px;
+    max-width: calc(100% - 48px);
+    margin: 0 auto;
+}
+.btn {
+    display: inline-block;
+    border: 1px solid transparent;
+    min-width: 205px;
+    line-height: 60px;
+    height: 60px;
+    color: #fff;
+    background-color: #2e80ce;
+    border-radius: 999px;
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: 400;
+}
+.btn:hover {
+    opacity: 0.9;
+    cursor: pointer;
+}
+/* Header */
+.header {
+    padding-top: 30px;
+    min-height: 100vh;
+    background: var(--header-bg);
+}
+.header-top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.logo {
+    display: inline-flex;
+    position: relative;
+    font-size: 1rem;
+}
+.logo__circle::before,
+.logo__circle::after {
+    content: "";
+    display: inline-block;
+    border-radius: 50%;
+}
+.logo__circle::before {
+    width: 3em;
+    height: 3em;
+    background: #2e80ce;
+}
+.logo__circle::after {
+    position: absolute;
+    width: 1.6em;
+    height: 1.6em;
+    top: 1.1em;
+    left: 1.1em;
+    background: #fff;
+}
+.logo__text {
+    text-align: right;
+    margin-left: 0.6em;
+    color: #fff;
+}
+.logo__brand {
+    display: block;
+    font-size: 1.8em;
+    font-weight: 400;
+    line-height: 1em;
+}
+.logo__brand-small {
+    font-size: 1.2em;
+    font-weight: 300;
+}
+.navbar__list {
+    display: flex;
+}
+.header-action__login,
+.navbar__links {
+    padding: 4px 21px;
+    color: #c9d2da;
+    font-size: 1.6rem;
+    font-weight: 300;
+}
+.navbar__links:hover,
+.navbar__links-active {
+    text-shadow: 1px 0 0 currentColor;
+    color: #fff;
+}
+.navbar__links-active::before {
+    position: relative;
+    left: -8px;
+    top: -2px;
+    content: "";
+    display: inline-block;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: #fff;
+}
+.header-action {
+    display: flex;
+    align-items: center;
+}
+.header-action__login {
+    margin-right: 7px;
+}
+.header-action__signup {
+    min-width: 104px;
+    height: 44px;
+    line-height: 44px;
+    font-size: 1.6rem;
+}
+/* Hero */
+.hero {
+    margin-top: 76px;
+    display: flex;
+    align-items: center;
+}
+.hero__content {
+    flex-shrink: 0;
+    width: 44%;
+}
+.hero__media {
+    flex-grow: 1;
+}
+.hero__heading {
+    color: #fff;
+    font-size: 7rem;
+    font-weight: 600;
+    line-height: 1.14; /* 114.286% */
+    letter-spacing: -1.4px;
+}
+.hero__desc {
+    margin-top: 22px;
+    color: #c9d2da;
+    font-size: 1.8rem;
+    font-weight: 300;
+    line-height: 1.66;
+}
+.hero__row {
+    display: flex;
+    align-items: center;
+    margin-top: 38px;
+}
+.hero__phone {
+    margin-left: 38px;
+    color: #fff;
+    font-size: 1.8rem;
+    line-height: 1.67;
+}
+.hero__images {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+.hero__img {
+    width: 330px;
+    height: 540px;
+    border-radius: 6px;
+    object-fit: cover;
+}
+.hero__img:first-child {
+    position: relative;
+    margin-right: -6px;
+}
+.hero__img:last-child {
+    width: 210px;
+    height: 410px;
 }
