--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,10 +37,23 @@ a {
     opacity: 0.9;
     cursor: pointer;
 }
+.section-heading {
+    color: #10375c;
+    font-size: 5rem;
+    font-weight: 600;
+    line-height: 1.2;
+    letter-spacing: -1px;
+}
+.section-desc {
+    margin-top: 18px;
+    color: #575f66;
+    font-size: 1.8rem;
+    font-weight: 300;
+    line-height: 1.67;
+}
 /* Header */
 .header {
-    padding-top: 30px;
-    min-height: 100vh;
+    padding: 30px 0 110px;
     background: var(--header-bg);
 }
 .header-top {
@@ -182,4 +195,126 @@ a {
 .hero__img:last-child {
     width: 210px;
     height: 410px;
+}
+/* Services */
+.service {
+    padding: 170px 0;
+}
+.service__heading,
+.service__desc {
+    text-align: center;
+}
+.service__list {
+    margin-bottom: 55px;
+}
+
+.service__desc {
+    max-width: 468px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.service__row {
+    margin-top: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.service__img {
+    width: 570px;
+    height: 570px;
+    border-radius: 12px;
+    object-fit: cover;
+}
+.service-item {
+    display: flex;
+    width: 470px;
+    padding: 21px 22px;
+    border-radius: 10px;
+    background: #fff;
+    transition: 0.25s;
+}
+.service-item:hover {
+    position: relative;
+    box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.05);
+}
+.service-item:hover .service-item__icon {
+    background-color: #2e80ce;
+    color: #ffffff;
+}
+.service-item__icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    color: #10375c;
+    background-color: #eff6fd;
+    transition: 0.25s;
+}
+.service-item__body {
+    margin-left: 20px;
+}
+.service-item__heading {
+    color: #10375c;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.27;
+}
+.service-item__desc {
+    margin-top: 8px;
+    color: #575f66;
+    font-size: 1.6rem;
+    font-weight: 300;
+    line-height: 1.75;
+}
+/* How it work */
+.works {
+    padding: 100px 0;
+    background: #f6fbff;
+}
+.work__desc {
+    width: 468px;
+}
+.work__list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 30px;
+    margin-top: 70px;
+}
+.work-item {
+    padding: 44px;
+    border: 16px solid #eaf6ff;
+    border-radius: 4px;
+}
+.work-item:hover {
+    transform: translateY(-16px);
+    border-color: #2e80ce;
+    transition: 0.25s;
+}
+.work-item:hover .work-item__more {
+    color: #2e80ce;
+}
+.work-item__heading {
+    margin-top: 18px;
+    color: #10375c;
+    font-size: 2.6rem;
+    font-weight: 600;
+    line-height: 1.38;
+}
+.work-item__desc {
+    margin-top: 28px;
+    color: #575f66;
+    font-size: 1.6rem;
+    font-weight: 300;
+    line-height: 1.75;
+}
+.work-item__more {
+    display: inline-block;
+    margin-top: 18px;
+    color: #575f66;
+    font-size: 1.6rem;
+    font-weight: 300;
+    line-height: 1.75;
 }
