--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -318,3 +318,112 @@ a {
     font-weight: 300;
     line-height: 1.75;
 }
+/* Feature */
+.feature {
+    margin-top: 85px;
+    padding: 85px 0;
+}
+.feature__body {
+    display: flex;
+    align-items: center;
+    gap: 130px;
+}
+.feature__media {
+    width: 48%;
+}
+.feature__images {
+    position: relative;
+    padding-right: 58px;
+    padding-bottom: 121px;
+}
+.feature__img {
+    width: 512px;
+    height: 370px;
+    border-radius: 6px;
+    object-fit: cover;
+}
+.feature__img:last-child {
+    position: absolute;
+    width: 332px;
+    height: 370px;
+    right: 0;
+    bottom: 0;
+}
+.feature__btn {
+    margin-top: 38px;
+}
+/* Member */
+.member {
+    padding: 85px 0;
+    text-align: center;
+}
+.member__header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.member__heading {
+    text-align: center;
+}
+.member__btn {
+    margin-top: 38px;
+}
+.member__list {
+    margin-top: 70px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 30px;
+}
+.member-item__img-bg {
+    padding-top: 28px;
+    border-radius: 6px;
+    background: #eaf6ff;
+    overflow: hidden;
+}
+.member-item__thumb {
+    display: block;
+    max-width: 100%;
+    height: 290px;
+    object-fit: cover;
+}
+.member-item__title {
+    margin-top: 12px;
+    color: #10375c;
+    font-size: 1.6rem;
+    font-weight: 600;
+    line-height: 1.75;
+}
+.member-item__desc {
+    color: #575f66;
+    font-size: 1.4rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 1.85; /* 185.714% */
+}
+.member__control {
+    display: flex;
+    justify-content: center;
+    column-gap: 18px;
+    margin-top: 38px;
+}
+.member__control-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    border: 1px solid #575f66;
+    background-color: #fff;
+    color: #575f66;
+    transition: 0.25s;
+}
+.member__control-btn:hover {
+    color: #fff;
+    border-color: #2e80ce;
+    background-color: #2e80ce;
+    cursor: pointer;
+}
+.member__control-next-icon {
+    rotate: 180deg;
+}
